kubernetes/apps/monitoring/kubernetes-dashboard/app/auth-proxy-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard-auth-proxy
  namespace: monitoring
  labels:
    app.kubernetes.io/name: kubernetes-dashboard-auth-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-dashboard-auth-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-dashboard-auth-proxy
    spec:
      containers:
        - name: proxy
          image: nginxinc/nginx-unprivileged:1.27-alpine
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
      volumes:
        - name: config-template
          configMap:
            name: kubernetes-dashboard-auth-proxy
        - name: config
          emptyDir: {}
        - name: dashboard-token
          secret:
            secretName: kubernetes-dashboard
            items:
              - key: token
                path: token
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
