kubernetes/apps/monitoring/kubernetes-dashboard/app/auth-proxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-auth-proxy
  namespace: monitoring
  labels:
    app.kubernetes.io/name: kubernetes-dashboard-auth-proxy
spec:
  selector:
    app.kubernetes.io/name: kubernetes-dashboard-auth-proxy
  ports:
    - name: http
      port: 80
      targetPort: http
